# CMakeUseDynamicLib

./: CMakeLists.txt  CMakeSettings.json
src/: CMakeLists.txt  main.cpp
